css/main.scss
---
---
@charset "utf-8";

.full-height {
    height: 100vh;
}
.inline-block {
    display: inline-block;
}
.halign {
    margin-left: auto;
    margin-right: auto;
}
footer .version {
    position: fixed;
    right: 0;
    bottom: 0;
}
footer .token {
    position: fixed;
    left: 0;
    bottom: 0;
}
input#barcode {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    opacity: 0;
}
html {
    overflow-x: hidden;
    overflow: hidden;
}
.bg-cover {
    background-size: cover;
}
.aspect-wrapper {
    height: 20vw;
}
.aspect-wrapper .aspect-3-4 {
    height: 90%;
}
.fixed-action-btn {
    bottom: 45px;
    right: 24px;
}
img {
    max-width: 100%;
}
.invisible {
    opacity: 0;
}
.product-card {
    background-color: #AFAFAF;
    background-blend-mode: darken;
    background-size: cover;
    background-position: center;
}
.product-container {
    height: 80vh;
    overflow-y: auto;
}
.autocomplete-list-item .autocomplete-content {
    position: absolute;
}

